--- a/.drone.yml
+++ b/.drone.yml
@@ -3,6 +3,11 @@ type: docker
 name: default
 
 steps:
+- name: test
+  image: mjehanno/golang_gui:latest
+  commands:
+  - go test ./...
+  - go test ./... -cover
 - name: code-analysis
   image: aosapps/drone-sonar-plugin
   settings:
@@ -10,10 +15,6 @@ steps:
       from_secret: sonar_host
     sonar_token:
       from_secret: sonar_token
-- name: test
-  image: mjehanno/golang_gui:latest
-  commands:
-  - go test ./...
 - name: build
   image: mjehanno/golang_gui:latest
   commands:
