--- a/.drone.yml
+++ b/.drone.yml
@@ -3,11 +3,16 @@ type: docker
 name: default
 
 steps:
+- name: dep
+  image: mjehanno/golang_gui:latest
+  commands:
+    - go get -d
 - name: test
   image: mjehanno/golang_gui:latest
   commands:
   - go test ./...
-  - go test ./... -cover
+  - go test ./... -json > test-report.out
+  - go test ./... -coverprofile=cover.out
 - name: code-analysis
   image: aosapps/drone-sonar-plugin
   settings:
