--- a/.drone.yml
+++ b/.drone.yml
@@ -3,6 +3,10 @@ type: docker
 name: default
 
 steps:
+- name: deps
+  image: mjehanno/golang_gui:latest
+  commands:
+  - go mod download
 - name: test
   image: mjehanno/golang_gui:latest
   commands:
@@ -23,11 +27,10 @@ steps:
 - name: package 
   image: mjehanno/golang_gui:latest
   commands:
-  - go install github.com/fyne-io/fyne-cross@latest
-  - fyne-cross android -pull -app-id $APP_ID -icon $ICON_PATH
-  - fyne-cross windows -pull -app-id $APP_ID -icon $ICON_PATH
-  - fyne-cross linux -pull -app-id $APP_ID -icon $ICON_PATH
-  - fyne-cross windows -pull -app-id $APP_ID -icon $ICON_PATH
+  - go get fyne.io/fyne/v2
+  - fyne package -os linux -icon $ICON_PATH
+  - fyne package -os windows -icon $ICON_PATH
+  - fyne package -os android -appID $APP_ID -icon $ICON_PATH
   environment:
     APP_ID: com.mjehanno.dnd-spellcounter
     ICON_PATH: ./Icon.png
