--- a/.drone.yml
+++ b/.drone.yml
@@ -34,7 +34,7 @@ steps:
 - name: package linux
   image: mjehanno/golang_gui_linux:latest
   commands:
-  - go install fyne.io/fyne/v2/cmd/fyne
+  - go install fyne.io/fyne/v2/cmd/fyne@latest
   - fyne package -os linux -icon $ICON_PATH
   environment:
     APP_ID: com.mjehanno.dnd-spellcounter
