--- a/.drone.yml
+++ b/.drone.yml
@@ -31,17 +31,17 @@ steps:
   when: 
     event:
     - tag  
-- name: package linux
-  image: mjehanno/golang_gui_linux:latest
-  commands:
-  - go install fyne.io/fyne/v2/cmd/fyne@latest
-  - fyne package -os linux -icon $ICON_PATH
-  environment:
-    APP_ID: com.mjehanno.dnd-spellcounter
-    ICON_PATH: ./Icon.png
-  when: 
-    event:
-    - tag
+# - name: package linux
+#   image: mjehanno/golang_gui_linux:latest
+#   commands:
+#   - go install fyne.io/fyne/v2/cmd/fyne@latest
+#   - fyne package -os linux -icon $ICON_PATH
+#   environment:
+#     APP_ID: com.mjehanno.dnd-spellcounter
+#     ICON_PATH: ./Icon.png
+#   when: 
+#     event:
+#     - tag
 - name: publish
   image: plugins/github-release
   settings:
