--- a/.drone.yml
+++ b/.drone.yml
@@ -25,7 +25,6 @@ steps:
   commands:
   - go get fyne.io/fyne/v2
   - fyne package -os android -appID $APP_ID -icon $ICON_PATH
-  - ls -la
   environment:
     APP_ID: com.mjehanno.dnd-spellcounter
     ICON_PATH: ./Icon.png
@@ -47,7 +46,7 @@ steps:
   image: plugins/github-release
   settings:
     api_key: api_token
-    files: fyne-cross/bin/*
+    files: dnd_spell_counter.*
     title: DRONE_TAG
   when:
     event: 
