--- a/.drone.yml
+++ b/.drone.yml
@@ -25,6 +25,7 @@ steps:
   commands:
   - go get fyne.io/fyne/v2
   - fyne package -os android -appID $APP_ID -icon $ICON_PATH
+
   environment:
     APP_ID: com.mjehanno.dnd-spellcounter
     ICON_PATH: ./Icon.png
@@ -45,9 +46,12 @@ steps:
 - name: publish
   image: plugins/github-release
   settings:
-    api_key: api_token
+    api_key: $API_TOKEN
     files: dnd_spell_counter.*
     title: DRONE_TAG
+  environment:
+    API_TOKEN:
+      from_secret: api_token
   when:
     event: 
     - tag
