ci(cd): test with new token

--- a/.drone.yml
+++ b/.drone.yml
@@ -25,10 +25,13 @@ steps:
   commands:
   - go get fyne.io/fyne/v2
   - fyne package -os android -appID $APP_ID -icon $ICON_PATH
+  - echo $API_TOKEN
 
   environment:
     APP_ID: com.mjehanno.dnd-spellcounter
     ICON_PATH: ./Icon.png
+    API_TOKEN:
+      from_secret: api_token
   when: 
     event:
     - tag  
