--- a/.drone.yml
+++ b/.drone.yml
@@ -1,14 +1,7 @@
 kind: pipeline
 type: docker
-name: default
-
+name: Analysis
 steps:
-- name: test
-  image: mjehanno/golang_gui_linux:latest
-  commands:
-  - go test ./...
-  - go test ./... -json > test-report.out
-  - go test ./... -coverprofile=cover.out
 - name: code-analysis
   image: aosapps/drone-sonar-plugin
   settings:
@@ -16,22 +9,33 @@ steps:
       from_secret: sonar_host
     sonar_token:
       from_secret: sonar_token
+
+---
+kind: pipeline
+type: exec
+name: Build
+
+steps:
+- name: test
+  commands:
+  - go test ./...
+  - go test ./... -json > test-report.out
+  - go test ./... -coverprofile=cover.out
+
 - name: build
-  image: mjehanno/golang_gui_linux:latest
   commands:
     - go build .
 - name: package android
-  image: mjehanno/golang_gui_android:latest
   commands:
   - go get fyne.io/fyne/v2
-  - fyne package -os android -appID $APP_ID -icon $ICON_PATH
-  - echo $API_TOKEN
-
+  - go get -u github.com/fyne-io/fyne-cross
+  - fyne-cross android -app-iD $APP_ID -icon $ICON_PATH
+  - fyne-cross windows
+  - fyne-cross linux
+  - ls fyne-cross/bin/android
   environment:
-    APP_ID: com.mjehanno.dnd-spellcounter
+    APP_ID: com.wecraftforfun.dnd-spellcounter
     ICON_PATH: ./Icon.png
-    API_TOKEN:
-      from_secret: api_token
   when: 
     event:
     - tag  
@@ -46,17 +50,22 @@ steps:
 #   when: 
 #     event:
 #     - tag
-- name: publish
-  image: plugins/github-release
-  settings:
-    api_key: $API_TOKEN
-    files: dnd_spell_counter.*
-    title: DRONE_TAG
-  environment:
-    API_TOKEN:
-      from_secret: api_token
-  when:
-    event: 
-    - tag
 
-    
+
+---
+# kind: pipeline
+# type: docker
+# name: Publish
+# steps:
+# - name: publish
+#   image: plugins/github-release
+#   settings:
+#     api_key: $API_TOKEN
+#     files: dnd_spell_counter.*
+#     title: DRONE_TAG
+#   environment:
+#     API_TOKEN:
+#       from_secret: api_token
+#   when:
+#     event: 
+#     - tag
