--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,3 +39,10 @@ jobs:
         with:
           name: dnd-spell-counter.win.zip
           path: ./fyne-cross/dist/windows-amd64/dnd-spell-counter.exe.zip
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: |
+            dnd-spell-counter.apk
+            dnd-spell-counter.exe.zip
