ci(cd): re-adding test and build for drone CI, modify path for cd

--- a/.drone.yml
+++ b/.drone.yml
@@ -9,63 +9,13 @@ steps:
       from_secret: sonar_host
     sonar_token:
       from_secret: sonar_token
-
-# ---
-# kind: pipeline
-# type: exec
-# name: Build
-
-# steps:
-# - name: test
-#   commands:
-#   - go test ./...
-#   - go test ./... -json > test-report.out
-#   - go test ./... -coverprofile=cover.out
-
-# - name: build
-#   commands:
-#     - go build .
-# - name: package android
-#   commands:
-#   - go get fyne.io/fyne/v2
-#   - go get -u github.com/fyne-io/fyne-cross
-#   - fyne-cross android -app-iD $APP_ID -icon $ICON_PATH
-#   - fyne-cross windows
-#   - fyne-cross linux
-#   - ls fyne-cross/bin/android
-#   environment:
-#     APP_ID: com.wecraftforfun.dnd-spellcounter
-#     ICON_PATH: ./Icon.png
-#   when: 
-#     event:
-#     - tag  
-# - name: package linux
-#   image: mjehanno/golang_gui_linux:latest
-#   commands:
-#   - go install fyne.io/fyne/v2/cmd/fyne@latest
-#   - fyne package -os linux -icon $ICON_PATH
-#   environment:
-#     APP_ID: com.mjehanno.dnd-spellcounter
-#     ICON_PATH: ./Icon.png
-#   when: 
-#     event:
-#     - tag
-
-
-# ---
-# kind: pipeline
-# type: docker
-# name: Publish
-# steps:
-# - name: publish
-#   image: plugins/github-release
-#   settings:
-#     api_key: $API_TOKEN
-#     files: dnd_spell_counter.*
-#     title: DRONE_TAG
-#   environment:
-#     API_TOKEN:
-#       from_secret: api_token
-#   when:
-#     event: 
-#     - tag
+- name: test
+  image: mjehanno/golang_gui_linux:latest
+  commands:
+  - go test ./...
+  - go test ./... -json > test-report.out
+  - go test ./... -coverprofile=cover.out
+- name: build
+  image: mjehanno/golang_gui_linux:latest
+  commands:
+    - go build .
