--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,5 +44,5 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
-            dnd-spell-counter.apk
-            dnd-spell-counter.exe.zip
+            ./fyne-cross/dist/android/dnd-spell-counter.apk
+            ./fyne-cross/dist/windows-amd64/dnd-spell-counter.exe.zip
